/* Adjective */ +trans tables, +eo <blonde#6131164>

--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -35,6 +35,15 @@ In the English language, it is one of only a few distinct words where the gender
 #: '''''blonde''' ale''; '''''blonde''' beer''
 # {{color}} Of a light [[yellow]]ish [[brown]] color.
 
+====Translations====
+{{trans-top|of a blonde complexion}}
+* Esperanto: {{t|eo|blonda}}
+{{trans-bottom}}
+{{trans-top|having a blonde or gold appearance}}
+{{trans-bottom}}
+{{trans-top|of a light brown color}}
+{{trans-bottom}}
+
 ===Derived terms===
 * [[ash blonde]]
 * [[dishwater blond]]
