--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -215,6 +215,9 @@ English transcriptions of Chinese speech often fail to distinguish between the c
 
 # To [[see]].
 
+====Synonyms====
+* [[petun]]
+
 ----
 
 ==Norwegian==
