--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -301,7 +301,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 #: ''You're going to think I'm '''plum''' crazy for this, but I want to adopt all seven kittens.''
 
 ====Translations====
-{{trans-top|}}
+{{trans-top|completely; utterly}}
 * Vietnamese: [[quá sức]] ([[tưởng tượng]])
 {{trans-mid}}
 {{trans-bottom}}
