--- a/en/惠/惠.15605.wikitext
+++ b/en/惠/惠.15605.wikitext
@@ -1,10 +1,16 @@
 {{also|恵}}
 ==Translingual==
 
+===Etymology===
+{{Han compound|叀|心|t2=heart|ls=ic}}
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=12|four=5033<sub>3</sub>|canj=十戈心 (JIP)}}
 
 # favor, benefit, confer kindness
+
+====Descendants====
+* [[橞]], [[潓]], [[繐]], [[蟪]], [[韢]]
 
 ====References====
 * {{Han ref|kx=0391.190|dkj=10822|dj=0724.050|hdz=42309.100|uh=60E0|ud=24800|bh=B466|bd=46182}}
