--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -15,7 +15,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 ===Proper noun===
 {{en-proper noun}}
 
-# A [[country]] in Western Europe having borders with [[Belgium]], [[Luxembourg]], [[Germany]], [[Switzerland]], [[Italy]], [[Monaco]], [[Andorra]] and [[Spain]]. Member state of the [[European Union]]. Official name: [[French Republic]] ([[République Française]]). Population: 62 million inhabitants.
+# A [[country]] in Western Europe having borders with [[Belgium]], [[Luxembourg]], [[Germany]], [[Switzerland]], [[Italy]], [[Monaco]], [[Andorra]], [[Spain]] and my [[penis]]. Member state of the [[European Union]]. Official name: [[French Republic]] ([[République Française]]). Population: 62 million inhabitants.
 
 ====Translations====
 {{trans-top|country}}
@@ -122,7 +122,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * [[Francophone]]
 * [[French]]
 * [[Frenchman]]
-
+* [[surrender]]
 ===See also===
 * [[Appendix:Countries of the world|Countries of the world]]
 
