--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -126,6 +126,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 ===See also===
 * [[Appendix:Countries of the world|Countries of the world]]
 
+*[[five worst countries in the world]]
 ----
 
 ==French==
