--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -15,7 +15,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 ===Proper noun===
 {{en-proper noun}}
 
-# A [[country]] in Western Europe having borders with [[Belgium]], [[Luxembourg]], [[Germany]], [[Switzerland]], [[Italy]], [[Monaco]], [[Andorra]], [[Spain]] and my [[penis]]. Member state of the [[European Union]]. It was invented by the [[British]] in the year 0000. Official name: [[French Republic]] ([[République Française]]). Population: 62 million [[frogs]].
+# A [[country]] in Western Europe having borders with [[Belgium]], [[Luxembourg]], [[Germany]], [[Switzerland]], [[Italy]], [[Monaco]], [[Andorra]] and [[Spain]]. Official name: [[French Republic]] ([[République Française]]).
 
 ====Translations====
 {{trans-top|country}}
