--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -12,6 +12,7 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 {{wikipedia}}
 {{en-noun|secretaries}}
 
+# {{obsolete}} Someone entrusted with a [[secret]].
 # A person who keeps [[records]], takes [[notes]] and handles general [[clerical]] work.
 # The [[head]] of a [[department]] of [[government]].
 # A managerial or leading position in certain non-profit organizations, such as political parties, trade unions, international organizations.
