--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -29,7 +29,7 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 ====Translations====
 {{trans-top|person keeping records and handling clerical work}}
 * Arabic: {{Arab|[[سكرتير]]}} {{IPAchar|(sekretér)}} {{m|f}}
-* Chechen: [[йозанча]]
+* [[Chechen]]: [[йозанча]]
 * Chinese: [[秘書]], [[秘书]] (mìshū)
 * Croatian: {{t|hr|tajnik|alt=tȃjnīk|m}}, {{t|hr|tajnica|alt=tȃjnica|f}}
 * Czech: {{t-|cs|sekretářka|f}}
@@ -41,8 +41,8 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 * Hebrew: {{he-translation|מזכיר|mazkir}} {{m}}
 * Hungarian: {{t+|hu|titkár}}, {{t-|hu|titkárnő}}
 * [[Interlingua]]: [[secretaria]] {{f}}
-* Italian: {{t+|it|segretario|m}}
 {{trans-mid}}
+* Italian: {{t+|it|segretario|m}}
 * Japanese: [[秘書]] (hisho)
 * Korean: [[비서]] (biseo)
 * Kurdish:
