/* Pronunciation */ nonrhotic sampa <port#6177496>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|/poʊɹt/|/pɔːɹt/|/pɔːt/}}, {{SAMPA|/poUr\t/|/pO:r\t/|/pO:r\t/}}
+* {{IPA|/poʊɹt/|/pɔːɹt/|/pɔːt/}}, {{SAMPA|/poUr\t/|/pO:r\t/|/pO:t/}}
 * {{audio|en-us-port.ogg|Audio (US)}}
 * {{rhymes|ɔː(r)t}}
 
