--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -156,6 +156,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Hindi: [[आलूचा]] (ālūćā), [[आलूबुखारा]] (ālūbukhārā)
 * Hungarian: {{t+|hu|szilva}}
 * Icelandic: [[plóma]] {{f}}
+* [[Irish]]: [[pluma]] {{m}}
 * Italian: {{t+|it|prugna|f}}, {{t-|it|susina|f}}
 * Japanese: {{t-|ja|セイヨウスモモ|tr=seiyōsumomo|sc=Jpan}}, {{t-|ja|プラム|tr=puramu|sc=Jpan}}
 {{trans-mid}}
@@ -197,6 +198,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * German: {{t-|de|Pflaumenbaum|m}}, {{t-|de|Zwetschgenbaum|m}}
 * Greek: {{t+|el|δαμασκηνιά|f|sc=Grek}} (damaskiniá)
 * Icelandic: [[plómutré]] {{f}}
+* [[Irish]]: [[crann plumaí]] {{m}}
 * Italian: {{t+|it|prugno|m}}, {{t-|it|susino|m}}
 * Japanese: [[セイヨウスモモ]] (seiyō sumomo)
 * Korean: {{t-|ko|자두나무|tr=jadunamu|sc=Hang}}
@@ -225,6 +227,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Greek: {{t|el|δαμασκηνί|n|sc=Grek}} (damaskiní)
 {{trans-mid}}
 * Icelandic: [[plómublár]] {{f}}
+* [[Irish]]: [[plumachorcra]]
 * Japanese: [[暗紫色]] (あんししょく, anshishoku)
 * Vietnamese: [[màu]] [[mận]]
 {{trans-bottom}}
@@ -256,7 +259,6 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * {{ttbc|Chinese}}: [[李子]] (lǐzi)
 * {{ttbc|Old English}}: [[plūme]] {{f}}
 * {{ttbc|Galician}}: [[ameixeira]] {{f}} (1), [[ameixa]] {{f}} (2)
-* {{ttbc|Irish}}: [[pluma]] {{m}}, [[prúna]] {{m}}
 * {{ttbc|Latin}}: [[prunum]] {{n}}
 {{trans-mid}}
 * {{ttbc|Lithuanian}}: [[slyva]] {{f}} (1, 2), [[slyvinis]] {{m}} (3)
