--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -195,6 +195,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Hebrew: [[לשחק]] (l'sāḥeq), [[להשתעשע]] (l'hishtāʿāsheʿā)
 * Hungarian: {{t+|hu|játszik}}
 * Icelandic: {{t+|is|leika}}, {{t+|is|leika sér}}
+* [[Irish]]: [[bí ag súgradh]] 
 * Italian: {{t+|it|giocare}}
 * Japanese: [[遊ぶ]] (あそぶ, asobu)
 {{trans-mid}}
@@ -231,6 +232,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * French: [[jouer]] de
 * Hebrew: [[לנגן]] ב- (l'nāgen b'-)
 * Icelandic: [[spila]], [[spila á]] (+ {{dat}})
+* [[Irish]]: [[seinn]]
 * Italian: {{t+|it|suonare}}
 * Old English: {{t-|ang|lacan|alt=lācan|xs=Old English}}
 * Polish: [[grać]] na
@@ -301,6 +303,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Finnish: {{t+|fi|pelata}}
 * French: [[jouer]] à
 * Icelandic: {{t-|is|spila}}, {{t+|is|leika}}
+* [[Irish]]: [[imir]]
 {{trans-mid}}
 * Kurdish:
 *: Sorani: {{t|ku|یاری کردن|tr=yarí kirdin|sc=KUchar}}
