--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -127,6 +127,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 {{trans-top|bend, crook}}
 * Dutch: [[krommen]], [[plooien]] (''pipe''), [[buigen]]
 * Finnish: [[käyristää]]
+*[[Irish]]: [[cuar]]
 * Italian: {{t+|it|curvare}}
 {{trans-mid}}
 * Korean: [[구부리다]] (guburida)
@@ -141,6 +142,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 {{trans-top|bend or turn gradually from a given direction}}
 * Dutch: {{t+|nl|afbuigen}}
 * Finnish: {{t-|fi|kaartaa}}
+*[[Irish]]: [[cuar]]
 * Italian: {{t+|it|curvare}}
 * Japanese: {{Jpan|[[曲がる]]}} ({{Jpan|[[まがる]]}}, magaru)
 {{trans-mid}}
@@ -153,7 +155,6 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 {{checktrans}}
 
 * {{ttbc|Indonesian}}: [[kurva]]
-* {{ttbc|Irish}}: [[cuar]]
 
 [[Category:1000 English basic words]]
 
