--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -33,7 +33,7 @@
 * Italian: [[aggrapparsi]] <ref>''Oxford-Paravia Concise - Dizionario Inglese-Italiano e Italiano-Inglese (in collaborazione con Oxford University Press)''. Edited by Maria Cristina Bareggi. Torino: Paravia, 2003. [[W:Wikipedia:book sources| ISBN 8839551107]]. [http://www.oxfordparavia.it/ Online version]</ref>
 * Japanese: [[掛ける]] ([[かける]], kakeru), [[ぶら下がる]] ([[ぶらさがる]], burasagaru), [[ぶら下げる]] ([[ぶらさげる]], burasageru)
 * Portuguese: [[agarrar]]
-* Spanish: [[sostener]], [[aferrarse]], adherirse or [[sujetar]], 
+* Spanish: [[sostener]], [[aferrarse]] or [[sujetar]]
 {{bottom}}
 
 ===References===
