--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -79,6 +79,7 @@
 * Lithuanian: {{t-|lt|badyti|xs=Lithuanian}}
 * Portuguese: {{t|pt|esfaquear}}
 * Russian: {{t|ru|закалывать|tr=zakályvat’|sc=Cyrl}}
+* [[Santali]]: {{tø|sat|ᱨᱳᱜ|tr=rok'|sc=Olck}}
 * Serbian: {{t-|sr|bosti}}
 * Spanish: {{t+|es|apuñalar}}
 * {{trreq|Swedish}}
