--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -101,6 +101,7 @@
 * Romanian: {{t+|ro|vorbi}}, {{t+|ro|discuta}}
 * [[Romansch]]: [[pledar]],  [[tschantschar]]
 * Russian: [[говорить]] (govorít’)
+* [[Santali]]: {{tø|sat|ᱨᱳᱲ|tr=rorr|sc=Olck}}
 * [[Scottish Gaelic]]: [[bruidhinn]]
 * Slovak: [[rozprávať]], [[hovoriť]]
 * Slovene: [[govoriti]] (1, 2, 3, 4, 6)
