--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -31,6 +31,7 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 * Bosnian: {{t-|bs|npr.}} {{i|[[na]] [[primjer]]}}
 * [[Catalan]]: [[p. ex.]] [[per exemple]]
 * Chinese: [[例如]] (li4 ru2)
+* Czech: {{t-|cs|např.}}
 * Danish: {{t+|da|f.eks.}}, {{t+|da|fx}} {{i|[[for eksempel]]}}
 * Dutch: {{t-|nl|bv.}}, {{t-|nl|bijv.}}, {{t|nl|bvb.}} {{i|{{t+|nl|bijvoorbeeld}}}}
 * Esperanto: [[ekz.]] {{i|[[ekzemple]]}}
@@ -54,6 +55,7 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 * Portuguese: [[p. ex.]], [[ex.]] {{i|[[por exemplo]]}}
 * Romanian: {{t-|ro|de exemplu}}
 * Russian: [[напр.]] {{i|[[например]]}}
+* [[Scottish Gaelic]]: {{t-|gd|me}}
 * Serbian:
 *: Cyrillic: [[нпр.]] {{i|[[на]] [[пример]]}}
 *: Roman: [[npr.]] {{i|[[na]] [[primer]]}}
