--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -1,11 +1,17 @@
 {{also|陽}}
 ==Translingual==
 
+===Etymology===
+{{Han compound|日|一|勿|t1=sun|ls=ic}}
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6022<sub>7</sub>|canj=日一尸竹 (AMSH)}}
 
 # to open out, to expand
 # [[bright]], [[glorious]]
+
+====Descendants====
+* [[陽]], [[踼]], [[湯]], [[揚]], [[場]], [[腸]], [[𥯕]], [[暘]], [[煬]], [[禓]], [[𥏫]], [[楊]], [[玚]], [[𦳝]], [[瘍]], [[崵]], [[碭]], [[䵮]], [[颺]], [[愓]], [[畼]], [[餳]], [[暢]], [[鍚]] (maybe also [[傷]], [[觴]], [[殤]])
 
 ====References====
 * {{Han ref|kx=0492.170|dkj=13832|dj=0855.170|hdz=21499.070|uh=661C|ud=26140|bh=CEEF|bd=52975}}
