--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -34,6 +34,7 @@ From {{etyl|fro}} ''[[founder]]'' (French: ''[[fonder]]''), from {{etyl|la}} ''[
 {{mid}}
 * French: [[fonder]] (1,2)
 * Portuguese: {{t+|pt|fundar}}
+* Russian: {{t|ru|основывать|sc=Cyrl|tr=osnóvyvat'}} {{impf}}, {{t|ru|основать|sc=Cyrl|tr=osnovát'}} {{pf}}
 * Spanish: {{t-|es|fundar}}, {{t|es|instaurar}}
 * Serbian: [[osnovati]]
 * Swedish: [[grunda]]
