--- a/en/块/块.13018.wikitext
+++ b/en/块/块.13018.wikitext
@@ -6,7 +6,7 @@
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土木大 (GDK)}}
 
 # [[piece]], [[lump]]
-# [[yuan]]
+# [[yuan]], any currency unit
 
 ====References====
 * {{Han ref|kx=0226.101|dkj=04948|dj=0461.110|hdz=10428.050|uh=5757|ud=22359}}
