--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -20,6 +20,7 @@ From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coût]]'').
 
 ====Translations====
 {{trans-top|amount of money, time, etc.}}
+* [[Chamicuro]]: {{tø|ccc|iso'no}}
 * Chinese:
 *: Mandarin: {{zh-ts|費用|费用}} ([[fèi]][[yòng]]), {{zh-ts|成本|成本}} ([[chéng]][[běn]])
 * Czech: {{t-|cs|náklad|m}}, {{t+|cs|cena|f}}
@@ -27,8 +28,8 @@ From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coût]]'').
 * German: {{t+|de|Kosten|f|p}}
 * Greek: {{t+|el|κόστος|n|tr=kóstos|sc=Grek}}, {{t+|el|δαπάνη|f|tr=dapáni|sc=Grek}}, {{t+|el|τίμημα|n|tr=tímima|sc=Grek}}, {{t+|el|αντίτιμο|n|tr=antítimo|sc=Grek}}
 * Hebrew: [[עלות]] ('alut) {{f}}
-* Italian: {{t+|it|costo|m}}, {{t+|it|spesa|f}}
 {{trans-mid}}
+* Italian: {{t+|it|costo|m}}, {{t+|it|spesa|f}}
 * Japanese: {{t+|ja|費用|tr=[[ひよう]], hiyō|sc=Jpan}}
 * Kurdish: {{KUchar|[[به‌ها]]}}, {{KUchar|[[نرخ]]}}
 * [[Novial]]: [[kosto]]
