--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -4,7 +4,7 @@
 ===Proper noun===
 '''the [[united|United]] [[states|States]] [[of]] [[America]]'''
 
-# A country in [[North America]], sharing land borders with [[Canada]] and [[Mexico]], stretching from the [[Atlantic Ocean|Atlantic]] to the [[Pacific Ocean]]{{,}} and including [[Alaska]], [[Hawaii]]{{,}} and several territories.
+# A country in [[North America]], sharing land borders with [[Canada]] and [[Mexico]], stretching from the [[Atlantic Ocean|Atlantic]] to the [[Pacific Ocean]]{{,}} and including [[Alaska]], [[Hawaii]]{{,}} and several territories. The original thirteen colonies declared their independence from Great Britain on July 4, 1776. Capital ''Washington DC'', largest city ''New York''
 
 ====Synonyms====
 * {{italbrac-colon|country in North America}} [[United States]], [[U.S.]], [[USA]], [[U.S.A.]], [[U.S. of A.]]
