--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -70,6 +70,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * CJKV Characters: [[橋]]
 * [[Catalan]]: [[pont#Catalan|pont]]
 * [[Central Atlas Tamazight]]: {{tø|tzm|ⵜⵉⵍⴻⴳⴳⵡⵉⵜ|f|tr=tileggwit|sc=Tfng|xs=Central Atlas Tamazight}}
+* [[Chamicuro]]: {{tø|ccc|pwente}}
 * Chinese: [[橋]], [[桥]] (qiáo)
 * Croatian: {{t+|hr|most|m}}
 * Czech: {{t+|cs|most|m}}
