--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -122,6 +122,7 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 [[io:secretary]]
 [[id:secretary]]
 [[it:secretary]]
+[[lo:secretary]]
 [[lt:secretary]]
 [[hu:secretary]]
 [[pl:secretary]]
