sorted/rebalanced translations, trans link [[Haitian Creole]], trans link [[Manx]], trans link [[Romagnolo]], trans link [[West Frisian]] <thunder#6211706>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -49,16 +49,16 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunara}} < *þen, from
 * French: {{t+|fr|tonnerre|m}}
 * Georgian: {{t|ka|ქუხილი|tr=kʻuxili}}
 * German: {{t+|de|Donner|m}}
-* Haitian Creole: {{tø|ht|loray}}
+* [[Haitian Creole]]: {{tø|ht|loray}}
 * Hungarian: {{t+|hu|mennydörgés}}, {{t|hu|égzengés}}
 * Italian: {{t-|it|tuono|m}}
 * Japanese: {{t+|ja|雷|tr=kaminarí|sc=Jpan}}
-{{trans-mid}}
 * Korean: [[우레]] (ure)
-* Manx: {{t-|gv|taarnagh}}
+{{trans-mid}}
+* [[Manx]]: {{t-|gv|taarnagh}}
 * Polish: {{t+|pl|grzmot|m}}
 * Portuguese: {{t+|pt|trovão|m}}
-* Romagnolo: [[tràun]] {{m}}
+* [[Romagnolo]]: [[tràun]] {{m}}
 * Russian: {{t+|ru|гром|m|tr=grom|sc=Cyrl}}
 * [[Scottish Gaelic]]: [[tàirneanach]] {{f}}
 * Serbian: {{t-|sr|grom}}, {{t-|sr|grmljavina}}
@@ -68,7 +68,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunara}} < *þen, from
 * Swedish: [[åska]] {{c}}, (åsk)[[smäll]] {{c}}
 * [[Taos]]: [[nąłàcit’ə́otuna]]
 * Thai: {{Thai|[[สายฟ้า]]}} (săaifáa)
-* West Frisian: {{t|fy|tonger}}
+* [[West Frisian]]: {{t|fy|tonger}}
 {{trans-bottom}}
 
 {{trans-top|a sound resembling thunder}}
