--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -71,7 +71,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 * Lao: {{t-|lo|ຕໍ່ສູ້|tr=töö-suu|sc=Laoo|xs=Lao}}, {{t-|lo|ຮົບ|tr=hop|sc=Laoo|xs=Lao}}
 * Latin: {{t-|la|pugnare}}
 * {{trreq|Latvian}}
-* {{trreq|Lithuanian}}
+* Lithuanian: {{t|lt|kautis|xs=Lithuanian}}
 * {{trreq|Maltese}}
 * {{trreq|Norwegian}}
 * Old English: {{t-|ang|feohtan|xs=Old English}}
