Reverted edits by [[Special:Contributions/71.247.134.89|71.247.134.89]] ([[User_talk:71.247.134.89|Talk]]); changed back to last version by [[User:Interwicket|Interwicket]] <suck#6226241>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -11,7 +11,7 @@ Old English ''[[sūcan]]''
 ===Verb===
 {{en-verb}}
 
-# To use the [[mouth]] to pull in [[liquid]] substances for ingestion or to perform a similar act on solid material without [[ingestion]]. ''[[Gerard McAuliffe]] sucked seaman out of ''[[Joe Micheal]]'s ''penis''
+# To use the [[mouth]] to pull in [[liquid]] substances for ingestion or to perform a similar act on solid material without [[ingestion]].
 # To draw into, by any means, with an attractive force, usually without direct contact. Used to describe the effect of  negative pressure allowing atmospheric pressure to push air in, as occurs with breathing, drinking and vacuum cleaning.
 # {{colloquial}} Term of general disparagement, to indicate that the [[subject]] or [[situation]] is [[unfortunately]] or [[unreasonably]] [[objectionable]], and has no [[redeeming]] qualities.  With ''at'', indicates a particular area of deficiency.
 #: ''You're great at baseball, but you '''suck''' at golf.''
