--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -62,7 +62,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * [[Azeri]]: {{t|az|körpü}}
 * [[Basque]]: [[zubi]]
 * Belarusian: {{t|be|мост|tr=most|m}}
-* Bengali: [[পুল]]
+* Bengali: {{tø|bn|পুল|tr=pul|sc=Beng}}
 * Bosnian: [[most#Bosnian|most]] {{m}}, [[ćuprija]] {{f}} ''(arch./poetic)''
 * [[Breton]]: [[pont#Breton|pont]] {{m}}, pontoù {{p}}
 * Bulgarian: {{t+|bg|мост|m|sc=Cyrl}}
