--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -45,7 +45,7 @@
 ===Noun===
 {{en-noun}}
 
-# Person living or originating from [[Europe]], or sometimes only the [[European Union]].
+# Person living or originating from [[Europe]], or sometimes only the [[European Union]]. Erupeans are a bunch of white bastards.
 
 ====Translations====
 {{trans-top|person}}
