--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -66,7 +66,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * Polish: {{t+|pl|znajdować}}
 * Portuguese: {{t+|pt|achar}}, {{t+|pt|encontrar}}
 * Romanian: {{t+|ro|găsi}}
-* Russian: {{t+|ru|найти|sc=Cyrl}}
+* Russian: {{t+|ru|находить|sc=Cyrl|tr=naxodít'}} {{impf}}, {{t+|ru|найти|sc=Cyrl|tr=najtí}} {{pf}}
 * Slovene: {{t+|sl|najti}}
 * Spanish: {{t+|es|encontrar}}, {{t+|es|hallar}}
 * Swedish: [[finna]], [[hitta]], [[uppdaga]], [[upptäcka]], [[utröna]]
@@ -81,7 +81,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 {{trans-mid}}
 * Norwegian: {{t+|no|finne}}
 * Portuguese: {{t+|pt|achar}}, {{t+|pt|encontrar}}
-* Russian: [[выискивать]]
+* Russian: {{t|ru|выискивать|sc=Cyrl|tr=vyískivat'}} {{impf}}
 * Swedish: {{t+|sv|finna}}, {{t+|sv|hitta}}
 {{trans-bottom}}
 
@@ -94,7 +94,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 {{trans-mid}}
 * Norwegian: {{t+|no|finne}}
 * Portuguese: {{t+|pt|achar}}
-* Russian: {{t+|ru|находить|sc=Cyrl}}
+* Russian: {{t+|ru|находить|sc=Cyrl|tr=naxodít'}} {{impf}}, {{t+|ru|найти|sc=Cyrl|tr=najtí}} {{pf}}
 * Swedish: [[finna]], [[konstatera]],
 {{trans-bottom}}
 
@@ -107,7 +107,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 {{trans-mid}}
 * Japanese: [[評決]]する (ひょうけつする, hyōketsu-suru)
 * Norwegian: {{t+|no|finne}}
-* Russian: {{t+|ru|находить|sc=Cyrl}}
+* Russian: {{t+|ru|находить|sc=Cyrl|tr=naxodít'}} {{impf}}, {{t+|ru|найти|sc=Cyrl|tr=najtí}} {{pf}}
 * Spanish: {{t-|es|determinar}}, {{t-|es|juzgar}}
 * Swedish: {{t+|sv|finna}}, {{t-|sv|konstatera}}
 {{trans-bottom}}
