--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -15,6 +15,8 @@ From {{etyl|fro}} {{term|conter||add up; tell a story|lang=fro}} < {{etyl|la}} {
 # The result of a [[tally]] that reveals the [[number]] of items in a set; a [[quantity]] [[counted]].
 # A [[countdown]].
 # {{legal}} A [[charge]] of misconduct brought in a [[legal]] proceeding.
+# {{baseball}} The number of [[balls]] and [[strikes]], respectively, on a batter's in-progress [[plate appearance]].
+#:''He has a 3-2 '''count''' with the bases loaded.''
 
 =====Translations=====
 {{trans-top|the result of a tally that reveals the number of items in a set}}
