replace obsolete script templates, Replaced: {{KUchar → {{ku-Arab using [[Project:AutoWikiBrowser|AWB]] <France#6252942>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -65,7 +65,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * [[Kannada]]: [[ಪ್ರಾಂಸ್]]
 * [[Kashmiri]]: [[फ्रांस]]
 * Korean: [[프랑스]] (Peurangseu)
-* Kurdish: {{KUchar|[[فه‌ره‌نسا]]}}
+* Kurdish: {{ku-Arab|[[فه‌ره‌نسا]]}}
 * Latin: {{t+|la|Gallia|f}}
 {{trans-mid}}
 * Latvian: {{t-|lv|Francija|f|xs=Latvian}}
