/* Han character */ BaGua <坎#6259780>

--- a/en/坎/坎.13009.wikitext
+++ b/en/坎/坎.13009.wikitext
@@ -6,6 +6,7 @@
 # [[pit]], [[hole]]
 # [[snare]], [[trap]]
 # [[crisis]]
+# 6th of the 8 [[w:Ba Gua|trigrams]]
 
 ====References====
 * {{Han ref|kx=0225.120|dkj=04928|dj=0460.040|hdz=10425.040|uh=574E|ud=22350|bh=A7A2|bd=42914}}
