--- a/en/坤/坤.13031.wikitext
+++ b/en/坤/坤.13031.wikitext
@@ -5,6 +5,7 @@
 
 # [[earth]]
 # [[feminine]], [[female]]
+# 8th of the 8 [[w:Ba Gua|trigrams]]
 
 ====References====
 * {{Han ref|kx=0226.140|dkj=04969|dj=0461.280|hdz=10431.070|uh=5764|ud=22372|bh=A95B|bd=43355}}
