rv: it's true that "the act of adapting ..." is a noun phrase, but "port" nearly always denotes the adapted version itself. <port#6262203>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -195,7 +195,7 @@ From {{etyl|fro}} {{term|porter|lang=fr}} < {{etyl|la}} {{term|portare||carry|la
 #: ''And of his '''port''' as meeke as is a mayde.'' — [[w:Geoffrey Chaucer|Chaucer]], ''[[w:The Canterbury Tales|Canterbury Tales]]'', [[s:The_Canterbury_Tales/General_Prologue|line 69]]
 #: ''..the necessities of pomp, grandeur, and a suitable '''port''' in the world.'' — [[w:Robert South|Robert South]]
 # {{military}} The position of a weapon when ported; a rifle position executed by throwing the weapon diagonally across the front of the body, with the right hand grasping the small of the stock and the barrel sloping upward and crossing the point of the left shoulder.
-# {{computing}} The act of adapting of a [[program]] so that it works on a different [[platform]] from the one on which it originally worked.
+# {{computing}} An adaptation of a [[program]] so that it works on a different [[platform]] from the one on which it originally worked.
 # {{computing}} A program that has been so adapted.
 # {{computing}} (FreeBSD) A set of files used to [[build]] and [[install]] a [[binary]] executable [[file]] from the [[source code]] of an [[application]].
 
