--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -49,6 +49,7 @@
 {{trans-top|possessing charm and attractive}}
 * [[Afrikaans]]: [[mooi]]
 * Albanian: [[bukur|i bukur]] {{m}}, e bukur {{f}}
+* Amharic: {{tø|am|ቆንጆ|tr=qonjo|sc=Ethi}}
 * Arabic: {{Arab|[[جميل]]}} (jamīl)
 * Armenian: [[գեղեցիկ]] (geġec'ik), [[սիրուն]] (sirun)
 * [[Breton]]: [[brav]], [[kaer]]
