--- a/en/昼/昼.16997.wikitext
+++ b/en/昼/昼.16997.wikitext
@@ -1,6 +1,9 @@
 {{also|晝}}
 ==Translingual==
 
+===Etymology===
+{{Han simp|晝|f=聿|t=尺}}
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=尸人日一 (SOAM)}}
 
