--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -195,15 +195,16 @@ From {{etyl|fro}} {{term|porter|lang=fr}} < {{etyl|la}} {{term|portare||carry|la
 #: ''And of his '''port''' as meeke as is a mayde.'' — [[w:Geoffrey Chaucer|Chaucer]], ''[[w:The Canterbury Tales|Canterbury Tales]]'', [[s:The_Canterbury_Tales/General_Prologue|line 69]]
 #: ''..the necessities of pomp, grandeur, and a suitable '''port''' in the world.'' — [[w:Robert South|Robert South]]
 # {{military}} The position of a weapon when ported; a rifle position executed by throwing the weapon diagonally across the front of the body, with the right hand grasping the small of the stock and the barrel sloping upward and crossing the point of the left shoulder.
-# {{computing}} The act of adapting of a [[program]] so that it works on a different [[platform]] from the one on which it originally worked.
-# {{computing}} A program that has been so adapted.
+# {{computing}} A [[program]] that has been [[adapt]]ed, [[modify|modified]], or [[recode]]d so that it works on a different [[platform]] from the one for which it was created; the act of this adapting.
+#: ''Gamers can't wait until a '''port''' of the title is released on the new system.''
+#: ''The latest '''port''' of the database software is the worst since we made the changeover.''
 # {{computing}} (FreeBSD) A set of files used to [[build]] and [[install]] a [[binary]] executable [[file]] from the [[source code]] of an [[application]].
 
 =====Derived terms=====
 * {{sense|military}} [[at the high port]]
 
 =====Translations=====
-{{trans-top|computing: act of adapting a program so that it works on a different platform}}
+{{trans-top|computing: program adapted to work on a different platform; act of adapting}}
 * Finnish: [[sovitus]], [[sovittaminen]], [[porttaaminen]] (''informal''), [[porttaus]] (''informal'')
 {{trans-mid}}
 * Swedish: [[portering]] {{c}}, [[portning]] {{c}}
