iwiki +[[:sv:vomit]] <vomit#6274206>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -103,6 +103,7 @@ From {{etyl|la}} ''[[vomitare]]''.
 [[pl:vomit]]
 [[simple:vomit]]
 [[fi:vomit]]
+[[sv:vomit]]
 [[ta:vomit]]
 [[te:vomit]]
 [[vi:vomit]]
