--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -4,7 +4,7 @@
 {{rank|real|eye|sun|496|cut|everything|six|comes}}
 
 ===Etymology===
-ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; or from {{etyl|gem}} *{{term||kut-}} (Cf. Norwegian [[kutte]]), akin to OSw ''kotta'' "to cut", ON ''kuti'' "little knife"
+ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|gem}} *{{term||kut-}} (Cf. Norwegian [[kutte]]), akin to OSw ''kotta'' "to cut", ON ''kuti'' "little knife"
 
 ===Pronunciation===
 * {{IPA|/kʌt/}}, {{SAMPA|/"kVt/}}
