/* Etymology */ +Dutch spreken <speak#6278778>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -11,7 +11,7 @@
 *: {{rhymes|iːk}}
 
 ===Etymology===
-{{etyl|ang}} ''[[specan|spēcan]]'', from earlier ''[[sprecan|sprēcan]]'', cf. German [[sprechen]].
+{{etyl|ang}} ''[[specan|spēcan]]'', from earlier ''[[sprecan|sprēcan]]'', cf. German ''[[sprechen]]'', Dutch ''[[spreken]]''.
 
 ===Verb===
 {{en-verb|'''[[speaks]]''' ''or archaic'', '''[[speaketh]]'''|speaking|'''[[spoke]]''' ''or archaic'', '''[[spake]]'''|spoken}}
