iwiki +[[:sv:float]] <float#6278967>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -229,6 +229,7 @@ Shares offered to the public:
 [[ru:float]]
 [[simple:float]]
 [[fi:float]]
+[[sv:float]]
 [[ta:float]]
 [[te:float]]
 [[th:float]]
