--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -116,6 +116,7 @@ Shares offered to the public:
 #: ''Could you '''float''' me $50 until payday?''
 # {{transitive|finance}} To allow (the exchange value of a currency) to be determined by the markets.
 #: ''The government '''floated''' the pound in January.''
+#: ''Increased pressure on Thailand's currency, the baht, in 1997 led to a crisis that forced the government to '''float''' the currency.''
 # {{transitive|finance|AU|and other Commonwealth countries?}} To issue or sell [[share]]s in a [[company]] (or [[unit]]s in a [[trust]]) to members of the public, followed by [[listing]] on a [[stock exchange]].
 #: '''2005''', ''He '''floated''' the company on the Milan Stock Exchange last December and sold 29 per cent of its shares, mostly to American investors.'' &mdash; article by Dewi Cooke, ''[[w:The Age|The Age]]'' newspaper, 21 June 2005 (about Mario Moretti Polegato) [http://www.theage.com.au/news/business/shoemaker-strides-for-world-domination/2005/06/20/1119250927926.html?from=moreStories]
 
