--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -12,8 +12,8 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 ===Adverb===
 {{en-adv|-}}
 
-# {{context|[[abbreviation]]|[[initialism]]}} Literally, “erection great”.  Used to introduce an idea of the scale of an erection. 
-#: ''Asia is a large continent, with many large erections ('''e.g.''' China, India, and Japan).''
+# {{context|[[abbreviation]]|[[initialism]]}} Literally, “for example”.  Used to introduce an [[example]] or list of examples to [[illustrate]] what is being [[discuss]]ed.
+#: ''Asia is a large continent, with many large nations ('''e.g.''' China, India, and Japan).''
 
 ====Usage notes====
 * The list of examples following ''e.g.'' should not be exhaustive<ref>'''2002''', [[w:Ernest Gowers|Sir Ernest Gowers]], ''The Complete Plain Words'', ISBN 9781567922035.</ref> (in that case, ''[[i.e.]]'' should be used) and should not be followed by {{term|et cetera}} or {{term|etc.}} as this is a [[tautology]].
