--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -203,6 +203,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Kurdish:
 *: Sorani: {{t|ku|یاری کردن|tr=yarí kirdin|sc=KUchar}}
 * Latin: [[lūdere]]
+* Lithuanian: {{t|lt|žaisti}}
 * Old English: {{t-|ang|lacan|alt=lācan|xs=Old English}}
 * [[Pashto]]: {{ps-Arab|[[لوبې کول]]}}, {{ps-Arab|[[لوبېدل]]}}, {{ps-Arab|[[غږول]]}}
 * Polish: [[bawić]] (się)
@@ -307,6 +308,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Irish: [[imir]]
 * Kurdish:
 *: Sorani: {{t|ku|یاری کردن|tr=yarí kirdin|sc=KUchar}}
+* Lithuanian: {{t|lt|žaisti}}
 * Polish: [[grać]] w
 * Portuguese: {{t+|pt|jogar}}
 * Russian: {{t+|ru|играть|tr=igrát’|sc=Cyrl}} {{impf}}
