--- a/en/c/caught.6831.wikitext
+++ b/en/c/caught.6831.wikitext
@@ -4,7 +4,7 @@
 
 ===Pronunciation===
 *{{a|UK}} {{IPA|/kɔːt/}}
-*{{a|US}} {{IPAchar|/kɑːt/}}
+*{{a|US}} {{a|Canada}} {{IPAchar|/kɑːt/}}
 *{{audio|en-us-caught.ogg|Audio (US)}}
 *{{audio|en-us-inlandnorth-caught.ogg|Audio (US-Inland North)}}
 *{{audio|en-au-caught.ogg|Audio (Australia)}}
