--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -29,6 +29,7 @@
 * Estonian: {{t+|et|safran}}
 * Finnish: {{t-|fi|maustesahrami}}
 * French: {{t+|fr|safran}}
+* Greek: {{t+|el|κρόκος|m|tr=krokos}}
 * Hindi: [[केसर]] (kesar) {{f}}
 * Italian: {{t+|it|zafferano|m}}
 * Japanese: [[サフラン]] (safuran)
