sorted/rebalanced translations, trans unlink Irish <curve#6306351>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -127,7 +127,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 {{trans-top|bend, crook}}
 * Dutch: [[krommen]], [[plooien]] (''pipe''), [[buigen]]
 * Finnish: [[käyristää]]
-*[[Irish]]: [[cuar]]
+* Irish: [[cuar]]
 * Italian: {{t+|it|curvare}}
 {{trans-mid}}
 * Korean: [[구부리다]] (guburida)
@@ -142,10 +142,10 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 {{trans-top|bend or turn gradually from a given direction}}
 * Dutch: {{t+|nl|afbuigen}}
 * Finnish: {{t-|fi|kaartaa}}
-*[[Irish]]: [[cuar]]
+* Irish: [[cuar]]
 * Italian: {{t+|it|curvare}}
-* Japanese: {{Jpan|[[曲がる]]}} ({{Jpan|[[まがる]]}}, magaru)
 {{trans-mid}}
+* Japanese: {{Jpan|[[曲がる]]}} ({{Jpan|[[まがる]]}}, magaru)
 * Korean: [[구부러지다]] (gubureojida)
 * Russian: [[изгибаться]], [[гнуться]]
 * Swedish: [[böja]] (sig)
