--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -256,6 +256,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Armenian: {{t|hy|կտրել|sc=Armn|tr=ktrel}}
 * Danish: [[skære]], [[snitte]]
 * Finnish: {{t+|fi|leikata}}
+* French: {{couper}}
 * German: {{t+|de|einschneiden}}
 * Hebrew: [[לחתוך]] (lakhtokh) (''transitive - to cut something intentionally''); [[להיחתך]] (lehikhatekh) (''intransitive - to be cut unintentionally'')
 {{trans-mid}}
