--- a/en/f/flaxen.6882.wikitext
+++ b/en/f/flaxen.6882.wikitext
@@ -8,7 +8,7 @@
 '''flaxen'''
 
 # made of, or resembling, [[flax]].
-# {{colour}} of a [[pale]] [[yellow]]ish [[brown]] [[colour]]; the colour of flax.
+# {{colour}} a pale yellow brown; the colour of dried flax stalks.
 #: {{color panel|C2B280}}
 
 ====Translations====
