--- a/en/f/flaxen.6882.wikitext
+++ b/en/f/flaxen.6882.wikitext
@@ -9,7 +9,7 @@
 
 # made of or resembling [[flax]] fibers.
 #*''The couple and their children have '''flaxen''' hair''.
-# {{colour}} a pale yellow brown; the colour of dried flax stalks and of the fiber obtained thereof.
+# {{colour}} a pale yellow brown; the colour of dried flax stalks and of the fiber obtained therefrom.
 #: {{color panel|C2B280}}
 
 ====Translations====
