--- a/en/p/Pythonesque.2111.wikitext
+++ b/en/p/Pythonesque.2111.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From the name of the British comedy troupe, [[Monty Python]], and due to the type of humour it contains. you are gay
+From the name of the British comedy troupe, [[Monty Python]], and due to the type of humour it contains.
 
 ===Adjective===
 {{en-adj}}
