--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -5,8 +5,7 @@
 * [[blonde]] (US)
 
 ===Etymology===
-From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}},
-likely derived from {{etyl|gem}}; compare Old English {{term|blondenfeax|''blonden''feax|''grey''-haired|lang=ang}}.
+From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}}, from Old French ''blont'', of {{etyl|gem}} origin from Frankish ''*blund'' "a mixed color between golden and light-brown"; compare Old English {{term|blondenfeax|''blonden''feax|''grey''-haired|lang=ang}}.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|/blɒnd/}}
