--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -224,6 +224,7 @@ Named from [[w:Oporto|Oporto]], a city in [[Portugal]] from whence the wines wer
 
 =====Translations=====
 {{trans-top|fortified wine}}
+* Armenian: {{t|hy|պորտվեյն|sc=Armn|tr=portveyn}}
 * Dutch: {{t-|nl|porto}}, {{t+|nl|port|m}}
 * Estonian: {{t-|et|portvein}}
 * Finnish: {{t-|fi|portviini}}
