--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -23,6 +23,7 @@
 ====Translations====
 {{trans-top|plant}}
 * Arabic: {{t-|ar|زعفران|alt=زَعْفَرَان|sc=Arab}}
+* Armenian: {{t|hy|քրքում|sc=Armn|tr=k’rk’um}}
 * Bosnian: [[šafran#Bosnian|šafran]] {{m}}
 * Bulgarian: [[шафран]] {{m}}
 * Chinese: [[番紅花]] / [[番红花]] (fān hóng huā)
@@ -52,6 +53,7 @@
 {{trans-bottom}}
 
 {{trans-top|spice}}
+* Armenian: {{t|hy|քրքում|sc=Armn|tr=k’rk’um}}
 * Bosnian: [[šafran#Bosnian|šafran]] {{m}}
 * Bulgarian: [[шафран]] {{m}}
 * Czech: {{t-|cs|šafrán|m}}
@@ -75,6 +77,7 @@
 {{trans-bottom}}
 
 {{trans-top|dye}}
+* Armenian: {{t|hy|քրքում|sc=Armn|tr=k’rk’um}}
 * Dutch: {{t+|nl|saffraan}}
 * Hindi: [[केसरी]] (kesarī), [[केसरिया]] (kesariyā)
 * Italian: {{t+|it|zafferano|m}}
@@ -86,6 +89,7 @@
 {{trans-bottom}}
 
 {{trans-top|colour}}
+* Armenian: {{t|hy|քրքում|sc=Armn|tr=k’rk’um}}
 * Finnish: {{t-|fi|sahraminkeltainen}}
 * French: {{t+|fr|safran}}
 * Hindi: [[केसरी]] (kesarī), [[केसरिया]] (kesariyā)
