--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -82,7 +82,7 @@
 * Latin: {{t-|la|pulcher}}, {{t-|la|formosus|m}}, {{t+|la|bellus|m}}
 * [[Novial]]: [[beli]]
 * Old English: {{t-|ang|wlitig|xs=Old English}}
-* [[Old Norse]]: [[fagr]]
+* Old Norse: [[fagr]]
 * Persian: {{fa-Arab|[[زیبا]]}} (ziba), {{fa-Arab|[[ﻗﺷﻧﮕﮦ]]}} (ghashangeh)
 * Polish: [[piękny]] {{m}}, [[piękna]] {{f}}, [[piękne]] {{n}}, [[piękni]] {{plural}}, [[piękne]] {{plural}},{{f}}
 * Portuguese: {{t+|pt|belo|m}}, {{t+|pt|bela|f}}, {{t+|pt|bonito|m}}, {{t-|pt|bonita|f}}
