--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -192,7 +192,7 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 * Estonian: [[või]], [[peagalööja]]
 * Finnish: {{t+|fi|voi}}
 * French: {{t+|fr|beurre|m}}
-* Georgian: {{t|ka|კარაქი|tr=karaqi}}
+* Georgian: {{t|ka|კარაქი|tr=karak'i}}
 * German: {{t+|de|Butter|f}}
 * Greek: [[βούτυρο]] (vútiro) {{n}}
 * Hebrew: {{t+|he|חמאה|f|alt=חֶמְאָה|tr=khem'a|sc=Hebr}}
