iwiki +[[:simple:blond]] <blond#6378381>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -113,6 +113,7 @@ From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}}, 
 [[pl:blond]]
 [[pt:blond]]
 [[ru:blond]]
+[[simple:blond]]
 [[fi:blond]]
 [[vi:blond]]
 [[zh:blond]]
