--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -13,7 +13,7 @@
 ====Verb====
 '''spelt'''
 
-# {{past of|[[spell#Verb|spell]]}}
+# {{past of|[[spell#Verb|spell]]}} (typically magic missile)
 
 =====Quotations=====
 * '''1590''', {{w|William Shakespeare}}, ''[[s:Love's Labour's Lost|Love's Labour's Lost]], v 1''
