sorted/rebalanced translations, trans link [[American Sign Language]] <beautiful#6388871>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -49,7 +49,7 @@
 {{trans-top|possessing charm and attractive}}
 * [[Afrikaans]]: [[mooi]]
 * Albanian: [[bukur|i bukur]] {{m}}, e bukur {{f}}
-* American Sign Language: {{t|ase|5@NearCheek-PalmBack RoundVert OpenA@NearJaw-PalmBack}}
+* [[American Sign Language]]: {{t|ase|5@NearCheek-PalmBack RoundVert OpenA@NearJaw-PalmBack}}
 * [[Amharic]]: {{tø|am|ቆንጆ|tr=qonjo|sc=Ethi}}
 * Arabic: {{Arab|[[جميل]]}} (jamīl)
 * Armenian: [[գեղեցիկ]] (geġec'ik), [[սիրուն]] (sirun)
@@ -74,8 +74,8 @@
 * Hebrew: [[יפה]] (yafe) {{m}}, יפה (yafa) {{f}}
 * Hindi: [[ख़ूबसूरत]] (<u>kh</u>ūbsūrat), [[सुन्दर]] (sundar)
 * Icelandic: {{t+|is|fallegur}}, {{t+|is|fagur}}
-* Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
 {{trans-mid}}
+* Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
 * Italian: {{t+|it|bello}}
 * Japanese: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
 * [[Khmer]]: {{Khmr|[[ស្អាត]]}} (saāt)
