--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -57,7 +57,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 {{trans-top|construction or natural feature that spans a divide}}
 * [[Afrikaans]]: [[brug]]
 * Albanian: {{t-|sq|urë|f|xs=Albanian}}
-* Arabic: {{Arab|[[كوبري]]}} (kúbri)
+* Arabic: {{Arab|[[جسر]]}} (JISR)
 * Armenian: {{t|hy|կամուրջ|sc=Armn|tr=kamurǰ}}
 * [[Azeri]]: {{t|az|körpü}}
 * [[Basque]]: [[zubi]]
