iwiki +[[:sw:fight]] <fight#6393433>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -329,6 +329,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 [[io:fight]]
 [[it:fight]]
 [[kk:fight]]
+[[sw:fight]]
 [[ku:fight]]
 [[lo:fight]]
 [[hu:fight]]
@@ -342,7 +343,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 [[ta:fight]]
 [[te:fight]]
 [[th:fight]]
-[[vi:fight]]
 [[tr:fight]]
 [[uk:fight]]
+[[vi:fight]]
 [[zh:fight]]
