--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -58,7 +58,7 @@
 
 ====Translations====
 {{trans-top|To move from further away to nearer to}}
-* Arabic: {{Arab|[[جاء]]}} (jā’a)
+* Arabic: {{Arab|[[جاء]]}} (jā’a), {{Arab|[[حضر]]}} (ḥáḍara)
 * Armenian: [[գալ]] (gal)
 * [[Basque]]: [[etorri]]
 * [[Bavarian]]: [[kemma]]
@@ -96,7 +96,7 @@
 * [[Rohingya]]: [[ai]]
 * Romanian: {{t-|ro|veni}}
 * [[Romansch]]: [[vegnir]]
-* Russian: {{t+|ru|приходить|sc=Cyrl}} / {{t+|ru|прийти|sc=Cyrl}} (prixodít’, prijtí)
+* Russian: {{t+|ru|приходить|sc=Cyrl}} {{impf}} (prixodít’), {{t+|ru|прийти|sc=Cyrl}} (prijtí) {{impf}}
 * [[Scottish Gaelic]]: [[thig]]
 * Slovene: {{t+|sl|priti}}
 * Spanish: {{t+|es|venir}}
