--- a/en/傄/傄.11156.wikitext
+++ b/en/傄/傄.11156.wikitext
@@ -18,7 +18,7 @@
 # {{defn|Japanese}}
 
 ====Readings====
-{{ja-readings|on=[[かつ]] (katsu), [[けち]] (kechi)|kun=[[すこやかなさま]] (sukoyakanasama)}}
+* {{ja-readings|on=[[かつ]] (katsu), [[けち]] (kechi)|kun=[[すこやかなさま]] (sukoyakanasama)}}
 
 ----
 
