--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -71,6 +71,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * French: {{t+|fr|brique}}
 * Georgian: [[აგჟრი]]
 * German: {{t+|de|Backstein}}, {{t+|de|Ziegel|m}}
+* Greek: [[οπτόπλινθος]] {{m}}, [[τούβλο]] {{n}} (''informal'')
 * Hebrew: {{t+|he|לבנה|sc=Hebr}}
 * Hungarian: {{t+|hu|tégla}}
 * Icelandic: [[múrsteinn]] {{m}}, [[tígulsteinn]] {{m}} {{qualifier|rare}}, [[leirsteinn]] {{m}}  {{qualifier|rare}}
@@ -107,6 +108,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * Finnish: {{t+|fi|tiili}}
 {{trans-mid}}
 * French: {{t+|fr|brique}}
+* Greek: [[οπτόπλινθος]] {{m}}, [[τούβλο]] {{n}} (''informal'')
 * Icelandic: [[múrsteinn]] {{m}}, [[byggingarklossar]] {{m|p}}, [[byggingarkubbar]] {{n|p}}
 * Latvian: [[ķieģelis]] {{m}}
 * Slovene: {{t+|sl|opeka}}
