--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -182,6 +182,8 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 ====Translations====
 {{trans-top|build with bricks}}
 * Greek: [[πλινθοδομώ]]
+{{trans-mid}}
+{{trans-bottom}}
 {{trans-top|make into brick}}
 * Dutch: tot bakstenen [[bakken]]
 {{trans-mid}}
