--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -5,7 +5,7 @@
 From {{etyl|es}} and {{etyl|fr}} {{term|libre||[[freedom]], [[liberty]]|lang=es}}
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/ˈliː.brə/}}, {{SAMPA|/"li:.br@/}}
+* {{a|UK}} {{IPA|/ˈliː.bɹə/}}, {{SAMPA|/"li:.br@/}}
 * {{homophones|Libra}}
 
 ===Adjective===
