--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -254,7 +254,7 @@ Abbreviation of [[portmanteau]].
 
 ===Etymology===
 
-From late {{etyl|non|da}} {{term|port|lang=non}} {{n}}, {{term|portr|lang=non}} {{m}}.
+From late {{etyl|non|da}} {{term|port|lang=non}} {{n}}, {{term|portr|lang=non}} {{m}}, from {{etyl|la|da}} {{term|porta|lang=la}} {{f}}.
 
 ===Pronunciation===
 * {{IPA|/port/|[pʰoɐ̯ˀd̥]|lang=da}}
