/* Norwegian */ +Etymology <port#6411042>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -304,7 +304,7 @@ From late {{etyl|non|da}} {{term|port|lang=non}} {{n}}, {{term|portr|lang=non}} 
 ----
 
 ==Norwegian==
-
+From late {{etyl|non|no}} {{term|port|lang=non}} {{n}}, {{term|portr|lang=non}} {{m}}, from {{etyl|la|no}} {{term|porta|lang=la}} {{f}}.
 ===Noun===
 {{no-noun-m1|port}}
 
