t+sa:[[इस्रेल]] t+hi:[[इस्राइल]] t+lt:[[Izraelis]] t+lt:[[Izraelio Valstybė]] t+lv:[[Izraēla]] t+lv:[[Izraēlas Valsts]] t-balance ([[User_talk:Conrad.Irwin/editor.js|Assisted]]) <Israel#6423719>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -55,15 +55,18 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * German: {{t+|de|Israel}}
 * Greek: {{t+|el|Ισραήλ|n|tr=israíl|sc=Grek}}
 * Hebrew: {{t+|he|ישראל|m|alt=יִשְׂרָאֵל|tr=yiśra'ēl|sc=Hebr}}
+* Hindi: {{t|hi|इस्राइल|tr=Isrāil|sc=Deva}}
 * Hungarian: {{t+|hu|Izrael}}
 * Icelandic: {{t+|is|Ísrael}}
 * Indonesian: {{t-|id|Israel|xs=Indonesian}}
 * [[Interlingua]]: {{t-|ia|Israel|xs=Interlingua}}
 * Irish: {{t+|ga|Iosrael|xs=Irish}}
 * Italian: {{t+|it|Israele}}
-{{trans-mid}}
 * Japanese: {{t+|ja|イスラエル|tr=isuraeru|sc=Jpan}}
+{{trans-mid}}
 * [[Kannada]]: [[ಇಸ್ರೇಲ್]]
+* Latvian: {{t|lv|Izraēla}},  {{t|lv|Izraēlas Valsts}}
+* Lithuanian: {{t|lt|Izraelis|m}},  {{t|lt|Izraelio Valstybė|m}}
 * [[Livonian]]: [[Izraēl]], [[Jūdõmō]]
 * [[Macedonian]]: [[Израел]] {{m}}
 * Maltese: [[Iżrael]]
@@ -76,6 +79,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * Portuguese: {{t+|pt|Israel}}
 * Romanian: {{t-|ro|Israel|n}}
 * Russian: [[Израиль]] (Izráil’) {{m}}
+* [[Sanskrit]]: {{t|sa|इस्रेल|sc=Deva}}
 * [[Scottish Gaelic]]: {{t-|gd|Iosrael|f|xs=Scottish Gaelic}}
 * Serbian:
 *: Cyrillic: [[Израел]] {{m}}
