--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -79,6 +79,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * Portuguese: {{t+|pt|Israel}}
 * Romanian: {{t-|ro|Israel|n}}
 * Russian: [[Израиль]] (Izráil’) {{m}}
+* [[Samogitian]]: {{tø|bat-smg|Izraelės|m}},  {{tø|bat-smg|Izraele Valstībė|f}}
 * [[Sanskrit]]: {{t|sa|इस्रेल|sc=Deva}}
 * [[Scottish Gaelic]]: {{t-|gd|Iosrael|f|xs=Scottish Gaelic}}
 * Serbian:
