--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -26,7 +26,7 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 ====Translations====
 {{trans-top|image}}
 * Bosnian: {{t-|bs|ikona|f}}
-* Dutch: [[icoon]] {{n}}
+* Dutch: [[icoon]] {{f|m}}
 * Finnish: {{t-|fi|ikoni}}, {{t+|fi|symboli}}
 * French: {{t+|fr|icône|f}}
 * German: {{t+|de|Bild|n}}
@@ -43,7 +43,7 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 {{trans-top|religious painting}}
 * Bosnian: {{t-|bs|ikona|f}}
 * Czech: {{t-|cs|ikona|f}}
-* Dutch: [[icoon]] {{n}}
+* Dutch: [[icoon]] {{f|m}}
 * Finnish: {{t-|fi|ikoni}}
 * German: {{t+|de|Ikone|f}}
 * Greek: [[εικόνα]] [iˈko̞na] {{f}}, [[εικόνισμα]] [iˈko̞niˌzma] {{n}}
@@ -76,7 +76,7 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 {{trans-top|small picture, computer icon}}
 * Bosnian: {{t-|bs|ikona|f}}
 * Czech: {{t-|cs|ikona|f}}
-* Dutch: [[icoon]], [[pictogram]] {{n}}
+* Dutch: [[icoon]] {{f|m}}, [[pictogram]] {{n}}
 * Finnish: {{t+|fi|kuvake}}
 * German: {{t-|de|Icon|n}}
 * Greek: [[εικονίδιο]] [iko̞ˈniðiˌo̞] {{n}}
