--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -60,7 +60,7 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 
 {{trans-top|best example of something}}
 * Bosnian: {{t-|bs|ikona|f}}
-* Dutch: [[icoon]], [[idool]] {{n}}
+* Dutch: [[icoon]] {{f|m}}, [[idool]] {{n}}
 * Finnish: {{t+|fi|symboli}}, {{t-|fi|ikoni}}
 * German: {{t+|de|Symbol|n}}
 * Greek: [[είδωλο]] [ˈiðo̞ˌlo̞] {{n}}, [[ίνδαλμα]] [ˈinðalˌma] {{n}}, [[εικόνα]] [iˈko̞na] {{f}}
