--- a/en/旬/旬.16916.wikitext
+++ b/en/旬/旬.16916.wikitext
@@ -54,9 +54,9 @@
 
 Tuần: 10 days period
 
-From day 1 to day 10: thượng tuần 上旬
-From day 11 to day 20: trung tuần 中旬
-From day 21 to the end of the month: hạ tuần hạ tuần 下旬
+From day 1 to day 10: thượng tuần 上旬 |
+From day 11 to day 20: trung tuần 中旬 |
+From day 21 to the end of the month: hạ tuần hạ tuần 下旬 |
 
 
 [[fr:旬]]
