--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -28,7 +28,7 @@ From {{etyl|la}} ''[[vomitare]]''.
 * Finnish: {{t+|fi|oksentaa}}
 * French: {{t+|fr|vomir}}
 * German: [[sich]] [[übergeben]], [[erbrechen]]
-* Greek: {{t+|el|εμετός|sc=Grek}}
+* Greek: {{t+|el|εμετός|m|sc=Grek}}
 * Hebrew: {{t|he|להקיא|sc=Hebr}}
 {{trans-mid}}
 * Italian: {{t+|it|vomitare}}, {{t+|it|rimettere}}
