--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -28,7 +28,7 @@ From {{etyl|la}} ''[[vomitare]]''.
 * Finnish: {{t+|fi|oksentaa}}
 * French: {{t+|fr|vomir}}
 * German: [[sich]] [[übergeben]], [[erbrechen]]
-* Greek: {{t+|el|εμετός|m|sc=Grek}}
+* Greek: [[εμώ]], [[κάνω εμετό]], [[ξερνώ]] (colloquial)
 * Hebrew: {{t|he|להקיא|sc=Hebr}}
 {{trans-mid}}
 * Italian: {{t+|it|vomitare}}, {{t+|it|rimettere}}
@@ -61,6 +61,7 @@ From {{etyl|la}} ''[[vomitare]]''.
 * Dutch: [[braaksel]], ''(colloquial)'' [[kots]]
 * Estonian: {{t-|et|okse}}
 * Finnish: {{t+|fi|oksennus}}
+* Greek: {{t+|el|εμετός|m|sc=Grek}}, {{t+|el|έμεσμα|n|sc=Grek}}
 * Hebrew: {{he-translation|קא|kei}}
 * Kurdish: {{ku-Arab|[[ڕشانه‌وه‌]]}}
 * Maltese: [[rimettar]]
