French translation <straight#6447920>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -135,7 +135,7 @@
 
 {{trans-top|heterosexual}}
 * Finnish: {{t+|fi|hetero}}, {{t+|fi|heteroseksuaali}}
-* French: {{t+|fr|hetero}}
+* French: {{t+|fr|hétéro}}
 * German: {{t-|de|hetero}}
 * Hungarian: [[heteró]]
 {{trans-mid}}
