--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -18,12 +18,12 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 
 ====Translations====
 {{trans-top|country in Oceania}}
-* Arabic: {{Arab|[[نيوزيلاندا]]}} (niuzilánda) {{f}}
+* Arabic: {{Arab|[[نيوزيلاندا]]}} (Nyuzilánda) {{f}}
 * Armenian: [[Նոր Զելանդիա]] (Nor Zelandia)
 * Bosnian: {{t-|bs|Novi Zeland|m}}
 * [[Breton]]: [[Zeland-Nevez]]
 * Bulgarian: [[Нова Зеландия]] (Nóva Zelándija) {{f}}
-* Chinese: [[新西蘭]], [[新西兰]] (Xīn Xīlán)
+* Chinese: [[新西蘭]], [[新西兰]] (Xīn-Xīlán), [[紐西蘭]], [[纽西兰]] (Niǔ-Xīlán) (in Taiwan)
 * Croatian: {{t-|hr|Novi Zeland|m}}
 * Czech: {{t-|cs|Nový Zéland|m}}
 * Danish: New Zealand
