/* Translations */ +ro <plum#6453468>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -168,6 +168,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * [[Old High German]]: [[pfrūma]]
 * Polish: {{t+|pl|śliwka|f}}
 * Portuguese: {{t+|pt|ameixa|f}}
+* Romanian: {{t+|ro|prună|f}}
 * Russian: {{t+|ru|слива|f|tr=slíva|sc=Cyrl}}
 * [[Scots]]: [[ploom]], [[ploum]]
 * [[Scottish Gaelic]]: {{t-|gd|plumas|m|xs=Scottish Gaelic}}
