t+ar:[[أتى]] ([[User_talk:Conrad.Irwin/editor.js|Assisted]]) <come#6457974>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -58,7 +58,7 @@
 
 ====Translations====
 {{trans-top|To move from further away to nearer to}}
-* Arabic: {{Arab|[[جاء]]}} (jā’a), {{Arab|[[حضر]]}} (ḥáḍara)
+* Arabic: {{Arab|[[جاء]]}} (jā’a), {{Arab|[[حضر]]}} (ḥáḍara),  {{t|ar|أتى|tr='ataa|sc=Arab}}
 * Armenian: [[գալ]] (gal)
 * [[Basque]]: [[etorri]]
 * [[Bavarian]]: [[kemma]]
