--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -58,12 +58,12 @@
 
 ====Translations====
 {{trans-top|To move from further away to nearer to}}
-* Arabic: {{Arab|[[جاء]]}} (jā’a), {{Arab|[[حضر]]}} (ḥáḍara),  {{t|ar|أتى|tr='ataa|sc=Arab}}
+* Arabic: {{t|ar|جاء|tr=jaa'a|sc=Arab}}, {{t|ar|حضر|tr=HaDara|sc=Arab}},  {{t|ar|أتى|tr='ataa|sc=Arab}}
 * Armenian: [[գալ]] (gal)
 * [[Basque]]: [[etorri]]
 * [[Bavarian]]: [[kemma]]
 * Bulgarian: [[идвам]] / [[отивам]] (idvam / otivam)
-* Chinese: [[來]], [[来]] ([[lái]])
+* Chinese: {{zh-tsp|來|来|lái}}
 * [[Crimean Tatar]]: [[kelmek]]
 * Czech: {{t+|cs|přijít}}
 * Dutch: {{t+|nl|komen}}
