--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -22,7 +22,7 @@
 * [[cling film]] / [[clingfilm]]
 
 ====Translations====
-{{top}}
+{{trans-top}}
 * Arabic: {{t|ar|تمسك|tr=tamassaka|sc=Arab}}
 * Chinese: {{t|zh|粘住|tr=niánzhù}}
 * Dutch: [[klampen]]
@@ -31,14 +31,14 @@
 * French: [[accrocher]], s'accrocher, [[coller]], se coller
 * [[Galician]]: [[soster]], [[agarrar]] or [[suxeitar]]
 * German: [[haften]], [[klammern]]
-{{mid}}
 * Indonesian: [[sangkut|menyangkut]], [[sangkut|menyangkutkan]], [[gantung|bergantung]], [[gantung|menggantung]], [[gantung|menggantungkan]]
+{{trans-mid}}
 * Italian: [[aggrapparsi]] <ref>''Oxford-Paravia Concise - Dizionario Inglese-Italiano e Italiano-Inglese (in collaborazione con Oxford University Press)''. Edited by Maria Cristina Bareggi. Torino: Paravia, 2003. [[W:Wikipedia:book sources| ISBN 8839551107]]. [http://www.oxfordparavia.it/ Online version]</ref>
 * Japanese: [[掛ける]] ([[かける]], kakeru), [[ぶら下がる]] ([[ぶらさがる]], burasagaru), [[ぶら下げる]] ([[ぶらさげる]], burasageru)
 * Portuguese: [[agarrar]]
 * Russian: {{t|ru|льнуть|tr=l'nut'|sc=Cyrl}}, {{t|ru|прилипать|tr=prilipát'|sc=Cyrl}}, {{t|ru|цепляться|tr=tseplját'sja|sc=Cyrl}}
 * Spanish: [[sostener]], [[aferrarse]] or [[sujetar]]
-{{bottom}}
+{{trans-bottom}}
 
 ===References===
 * {{R:Century 1911}}
