--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -212,6 +212,7 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 * Lithuanian: [[sviestas]] {{m}}
 * [[Macedonian]]: [[путер]] {{m}}
 * [[Manx]]: {{t|gv|eeym|f|xs=Manx}}
+* [[Marathi]]: {{t|mr|माखणे|tr=mākhaṇe}}
 * Mongolian: {{Cyrl|[[цөцгийн тос]]}} (tsötsgiin tos)
 * Old English: {{t-|ang|butere|f|xs=Old English}}
 * [[Old Irish]]: {{tø|sga|imb|n}}
