--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -4,7 +4,7 @@
 *[[bonemarrow]]
 
 ===Noun===
-{{en-noun|sg=[[bone]] [[marrow]]|-}}
+{{en-noun|sg=[[bone]] [[marrow]]|-|s}}
 
 # {{anatomy}} The [[fatty]] [[vascular]] [[tissue]] that fills the [[cavities]] of bones; the place where new [[blood]] [[cell]]s are produced.
 
