--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -47,6 +47,7 @@ From {{etyl|fro}} ''[[branche]]''.
 * Italian: {{t+|it|ramo}}
 {{trans-mid}}
 * Kurdish: {{ku-Arab|[[چرۆ]]}}, {{ku-Arab|[[لق]]}}
+* Lithuanian: {{t|lt|šaka|f}}
 * Polish: {{t+|pl|gałąź|f}}
 * Portuguese: {{t+|pt|galho|m}}
 * Romanian: {{t+|ro|ram|n}}, {{t-|ro|ramură|f}}
