--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -27,8 +27,8 @@ From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coût]]'').
 * German: {{t+|de|Kosten|f|p}}
 * Greek: {{t+|el|κόστος|n|tr=kóstos|sc=Grek}}, {{t+|el|δαπάνη|f|tr=dapáni|sc=Grek}}, {{t+|el|τίμημα|n|tr=tímima|sc=Grek}}, {{t+|el|αντίτιμο|n|tr=antítimo|sc=Grek}}
 * Hebrew: [[עלות]] ('alut) {{f}}
-{{trans-mid}}
 * Italian: {{t+|it|costo|m}}, {{t+|it|spesa|f}}
+{{trans-mid}}
 * Japanese: {{t+|ja|費用|tr=[[ひよう]], hiyō|sc=Jpan}}
 * Kurdish: {{ku-Arab|[[به‌ها]]}}, {{ku-Arab|[[نرخ]]}}
 * [[Novial]]: [[kosto]]
@@ -46,10 +46,11 @@ From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coût]]'').
 * Finnish: {{t+|fi|hinta}}
 * German: {{t+|de|Verlust|m}}, {{t-|de|Ausgaben|f}}
 * Greek: {{t+|el|κόστος|n|tr=kóstos|sc=Grek}}
-{{trans-mid}}
 * Japanese: {{t|ja|代償|tr=[[だいしょう]], daishō|sc=Jpan}}
+{{trans-mid}}
 * [[Novial]]: [[kosto]]
 * Polish: {{t+|pl|cena|f}}
+* Russian: {{t|ru|издержки|f|p|tr=izdéržki|sc=Cyrl}}
 * [[Scottish Gaelic]]: {{t-|gd|cosgais|f|xs=Scottish Gaelic}}
 * Spanish: {{t+|es|costo|m}}
 * Swedish: {{t+|sv|kostnad|c}}
