--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -50,7 +50,7 @@ From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coût]]'').
 {{trans-mid}}
 * [[Novial]]: [[kosto]]
 * Polish: {{t+|pl|cena|f}}
-* Russian: {{t|ru|издержки|f|p|tr=izdéržki|sc=Cyrl}}
+* Russian: {{t|ru|издержки|f|p|tr=izdéržki|sc=Cyrl}}, {{t|ru|затраты|f|p|tr=zatráty|sc=Cyrl}}, {{t|ru|цена|f|tr=tsená|sc=Cyrl}}
 * [[Scottish Gaelic]]: {{t-|gd|cosgais|f|xs=Scottish Gaelic}}
 * Spanish: {{t+|es|costo|m}}
 * Swedish: {{t+|sv|kostnad|c}}
