--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -97,6 +97,8 @@
 
 ====Translations====
 {{trans-top|move slowly with the abdomen close to the ground}}
+* Arabic: {{t|ar|زحف|tr=zaHafa|sc=Arab}}
+* Chinese: {{t|zh|爬|tr=pá}}, {{t|zh|匍|tr=pú}}, {{t|zh|爬行|tr=páxíng}},  {{t|zh|匍匐|tr=púfú}},  {{t|zh|蛇行|tr=shéxíng}}
 * [[Catalan]]: [[arrossegar-se]]
 * Czech: [[plazit]] se
 * Danish: {{t-|da|krybe}}
@@ -104,12 +106,12 @@
 * Esperanto: [[rampi]]
 * Finnish: {{t+|fi|ryömiä}}, {{t-|fi|madella}}
 * French: {{t+|fr|ramper}}
-* German: {{t+|de|kriechen}}
+* German: {{t+|de|kriechen}}, {{t+|de|krabbeln}}
 {{trans-mid}}
 * Italian: {{t+|it|strisciare}}
-* Japanese: [[這う]] (hau)
+* Japanese: {{t|ja|這う|tr=hau|sc=Jpan}}
 * Portuguese: {{t+|pt|rastejar}}
-* Russian: {{t+|ru|ползти|tr=polztí|sc=Cyrl}}, {{t+|ru|ползать|tr=pólzat'|sc=Cyrl}}
+* Russian: {{t+|ru|ползать|tr=pólzat'|sc=Cyrl}},  {{t|ru|ползти|tr=polztí|sc=Cyrl}}
 * Spanish: [[arrastrarse]], [[reptar]]
 * Swedish: [[krypa]], [[kräla]]
 * [[West Frisian]]: {{t+|fy|krûpe|xs=West Frisian}}
