--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -379,13 +379,14 @@ Old English ''[[pleġa]]'', ''plæġa''
 * [[playout]]
 * [[playpen]]
 * [[playroom]]
-{{rel-mid3}}
 * [[playschool]]
+{{rel-mid3}}
 * [[play the field]]
 * [[plaything]]
 * [[playtime]]
 * [[play to the gallery]]
 * [[play up]]
+* [[play with]]
 * [[play with fire]]
 * [[play with oneself]]
 * [[playwright]]
