/* Translations */ Hungarian equivalents <play#6473397>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -86,7 +86,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * French: {{t+|fr|pièce|f}}
 * German: {{t+|de|Schauspiel|n}}
 * Hebrew: {{t+|he|משחק|m|tr=misḥāq|sc=Hebr}}
-* Hungarian: {{t+|hu|darab}}, {{t+|hu|színdarab}}
+* Hungarian: {{t+|hu|színdarab}}, {{t+|hu|darab}} 
 {{trans-mid}}
 * Italian: {{t+|it|dramma|m}}
 * Japanese: [[演劇]] (えんげき, engeki)
@@ -108,6 +108,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Dutch: [[spelbeweging]] {{f}}
 * Finnish: {{t+|fi|peli}}
 * Hebrew: {{t+|he|משחק|m|tr=misḥāq|sc=Hebr}}
+* Hungarian: {{t+|hu|játék}}
 * Kurdish: {{t+|ku|yarî|f}}, {{t+|ku|lîstik|f}}
 {{trans-mid}}
 * Polish: {{t+|pl|gra|f}}
