/* Translations */ Hungarian equivalents <play#6473447>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -235,6 +235,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 {{trans-mid}}
 * French: [[jouer]] de
 * Hebrew: [[לנגן]] ב- (l'nāgen b'-)
+* Hungarian: {{t|hu|játszik ''(noun specifying instrument in superessive case)''}
 * Icelandic: [[spila]], [[spila á]] (+ {{dat}})
 * Irish: {{t-|ga|seinn|xs=Irish}}
 * Italian: {{t+|it|suonare}}
@@ -256,6 +257,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * French: {{t+|fr|jouer}}
 * German: {{t+|de|spielen}}
 * Hebrew: [[לנגן]] (l'nāgen)
+* Hungarian: {{t+|hu|játszik}
 * Icelandic: {{t-|is|spila}}
 {{trans-mid}}
 * Japanese: [[演奏]]する (ensō suru)
@@ -287,6 +289,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * German: {{t+|de|spielen}}
 * Hebrew: [[לשחק]] (l'sāḥeq)
 {{trans-mid}}
+* Hungarian: {{t+|hu|játszik}
 * Icelandic: {{t+|is|leika}}
 * Italian: {{t-|it|recitare}}
 * Korean: [[연기를 하다]] (yeon-gireul hada)
@@ -304,6 +307,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Chinese: [[玩]] (wán)
 * Czech: {{t+|cs|hrát}}
 * Dutch: [[spelen]], [[meespelen]]
+* Hungarian: {{t+|hu|játszik}
 * Finnish: {{t+|fi|pelata}}
 * French: [[jouer]] à
 * Icelandic: {{t-|is|spila}}, {{t+|is|leika}}
@@ -328,6 +332,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Finnish: {{t+|fi|soittaa}}
 * French: {{t+|fr|jouer}}
 * Hebrew: [[להשמיע]] (l'hāshmiʿā)
+* Hungarian: {{t|hu|lejátszik}
 {{trans-mid}}
 * Icelandic: {{t-|is|spila}}
 * Kurdish:
