--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -235,7 +235,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 {{trans-mid}}
 * French: [[jouer]] de
 * Hebrew: [[לנגן]] ב- (l'nāgen b'-)
-* Hungarian: {{t|hu|játszik ''(noun specifying instrument in superessive case)''}
+* Hungarian: {{t|hu|játszik ''(noun specifying instrument in superessive case)''}}
 * Icelandic: [[spila]], [[spila á]] (+ {{dat}})
 * Irish: {{t-|ga|seinn|xs=Irish}}
 * Italian: {{t+|it|suonare}}
