Replaced «et cætera» for «et cœtera». <et cetera#6484129>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -4,7 +4,7 @@
 * '''[[&c]]''', '''[[&c.]]''' {{italbrac|archaic}}
 * '''[[etc]], '''[[etc.]]'''
 * '''[[etcetera]]'''
-* '''[[et cætera]]''', '''[[et coetera]]'''
+* '''[[et cœtera]]''', '''[[et coetera]]'''
 
 ===Etymology===
 From {{etyl|la|en}} {{term|et cetera|et cētera|lang=la|and the rest" or "and so forth}}
