* before ja-readings <垐#6484691>

--- a/en/垐/垐.13076.wikitext
+++ b/en/垐/垐.13076.wikitext
@@ -18,7 +18,7 @@
 # {{defn|Japanese}}
 
 ====Readings====
-{{ja-readings|on=[[し]] (shi), [[じ]] (ji), [[しょう]] (shō), [[じき]] (jiki)|kun=[[にくむ]] (nikumu)}}
+* {{ja-readings|on=[[し]] (shi), [[じ]] (ji), [[しょう]] (shō), [[じき]] (jiki)|kun=[[にくむ]] (nikumu)}}
 
 ----
 
