--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{SH.}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land of the [[Slav]]s).  Literally, ''the land of the south Slavs''.
+From {{etyl|sh|en}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land of the [[Slav]]s).  Literally, ''the land of the south Slavs''.
 
 ===Alternative spellings===
 * [[Jugoslavia]] (''common pre-WWII spelling'')
