--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -229,6 +229,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 [[et:curve]]
 [[fa:curve]]
 [[fr:curve]]
+[[ko:curve]]
 [[hy:curve]]
 [[io:curve]]
 [[it:curve]]
@@ -241,6 +242,6 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 [[fi:curve]]
 [[ta:curve]]
 [[te:curve]]
-[[vi:curve]]
 [[tr:curve]]
+[[vi:curve]]
 [[zh:curve]]
