--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -28,6 +28,7 @@ From {{etyl|fro}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}}), f
 * Czech: {{t|cs|založit}}
 {{trans-mid}}
 * French: {{t|fr|fonder}}
+* Russian: {{t|ru|основывать|tr=osnóvyvat'|sc=Cyrl}} {{impf}}, {{t|ru|основать|tr=osnovát'|sc=Cyrl}} {{pf}}
 {{trans-bottom}}
 
 {{trans-top|to start organization}}
@@ -35,6 +36,7 @@ From {{etyl|fro}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}}), f
 * Finnish: {{t|fi|perustaa}}
 {{trans-mid}}
 * French: {{t|fr|fonder}}
+* Russian: {{t|ru|основывать|tr=osnóvyvat'|sc=Cyrl}} {{impf}}, {{t|ru|основать|tr=osnovát'|sc=Cyrl}} {{pf}}
 {{trans-bottom}}
 
 {{checktrans-top}}
@@ -45,7 +47,6 @@ From {{etyl|fro}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}}), f
 * {{ttbc|Estonian}}: {{t|et|asutama}}
 {{checktrans-mid}}
 * {{ttbc|Portuguese}}: {{t+|pt|fundar}}
-* {{ttbc|Russian}}: {{t|ru|основывать|tr=osnóvyvat'|sc=Cyrl}} {{impf}}, {{t|ru|основать|tr=osnovát'|sc=Cyrl}} {{pf}}
 * {{ttbc|Spanish}}: {{t-|es|fundar}}, {{t-|es|instaurar}}
 * {{ttbc|Serbian}}: [[osnovati]]
 * {{ttbc|Swedish}}: [[grunda]]
