--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -355,8 +355,18 @@ Old English ''[[pleġa]]'', ''plæġa''
 ===Derived terms===
 {{rel-top3|Terms derived from the noun or verb "play"}}
 * [[airplay]]
+* [[all work and no play makes Jack a dull boy]]
+* [[child's play]]
+* [[close of play]]
+* [[double play]]
 * [[downplay]]
 * [[fair play]]
+* [[force play]]
+* [[foul play]]
+* [[learn to play]]
+* [[long play]]
+* [[nativity play]]
+* [[passion play]]
 * [[playact]]
 * [[play along]]
 * [[play around]]
@@ -369,40 +379,73 @@ Old English ''[[pleġa]]'', ''plæġa''
 * [[play dead]]
 * [[play doctor]]
 * [[playdough]]
-{{rel-mid3}}
 * [[play down]]
 * [[play dumb]]
 * [[player]]
+* [[play fair]]
+* [[play fast and loose]]
+{{rel-mid3}}
+* [[play fight]]/[[play-fight]]/[[playfight]]
+* [[play for love]]
 * [[playful]]
 * [[play games]]
 * [[playground]]
+* [[play hardball]]
+* [[play hard to get]]
+* [[play hooky]]
 * [[play house]]
 * [[playhouse]]
+* [[play in]]
+* [[play it by ear]]
+* [[play it safe]]
 * [[play lunch]]
 * [[playmate]]
 * [[play money]]
-* [[playoff]]
+* [[playoff]]/[[play-off]]/[[play off]]
+* [[play Old Harry]]
+* [[play on]]
+* [[play one against another]]
+* [[play one's cards right]]
+* [[play on words]]
 * [[playout]]
 * [[playpen]]
+* [[play possum]]
 * [[playroom]]
 * [[playschool]]
+* [[play second fiddle]]
+* [[play silly buggers]]
+* [[play someone like a fiddle]]
 {{rel-mid3}}
 * [[play the field]]
+* [[play the fool]]
+* [[play the ponies]]
+* [[play the race card]]
+* [[play the same tape]]
+* [[play the white man]]
 * [[plaything]]
 * [[playtime]]
 * [[play to the gallery]]
+* [[play truant]]
 * [[play up]]
 * [[play with]]
 * [[play with fire]]
 * [[play with oneself]]
 * [[playwright]]
+* [[plug-and-play]]
 * [[power play]]
+* [[quad play]]
 * [[radio play]]
-* [[roleplay]]
-* [[screen play]]
+* [[rain stopped play]]
+* [[roleplay]]/[[role play]]/[[role-play]]
+* [[screen play]]/[[screenplay]]
+* [[shadow play]]
+* [[squeeze play]]
+* [[triple play]]
+* [[turnabout is fair play]]
 * [[two can play that game]]
 * [[war play]]
-* [[word play]]
+* [[when the cat's away the mice will play]]
+* [[word play]]/[[wordplay]]
 {{rel-bottom}}
 
 [[Category:1000 English basic words]]
