/* Translations */ French nautical: Passerelle <bridge#6491280>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -184,6 +184,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 {{trans-top|nautical}}
 * Armenian: {{t|hy|նավապետի կամրջակ|tr=navapeti kamrǰak|sc=Armn|xs=Armenian}}
 * Bosnian: {{t-|bs|kapetanski mostić|m}}
+* French: {{t+|fr|passerelle|f}}
 * Finnish: {{t|fi|komentosilta}}
 * Hungarian: {{t+|hu|hid|alt=híd}}
 * Polish: {{t|pl|mostek kapitański|m}}
