--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -28,6 +28,7 @@ From Old Norse ''[[skyrta]]'', from Germanic ''*skurtijon''.  Compare ''[[shirt]
 ====Translations====
 {{trans-top|clothing}}
 * Bosnian: {{t-|bs|suknja|f}}
+* Bulgarian: [[пола]] {{f}}
 * [[Chamicuro]]: {{tø|ccc|ita'la}}
 * Chinese: [[裙]] (qún)
 * Croatian: {{t+|hr|suknja|f|alt=sȕknja}}
@@ -47,6 +48,7 @@ From Old Norse ''[[skyrta]]'', from Germanic ''*skurtijon''.  Compare ''[[shirt]
 * Japanese: [[スカート]] ([[すかーと]]) (sukāto)
 {{trans-mid}}
 * Korean: [[치마]] (chima)
+* Macedonian [[здолниште]] {{n}}, [[здолница]] {{f}}, [[сукња]] {{f}} (''colloq.'')
 * Maltese: [[dublett]] {{m}}
 * Old English: [[scyrte]] {{f}}
 * Persian: {{fa-Arab|[[دامن دوخت]]}}
