--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -48,7 +48,7 @@ From Old Norse ''[[skyrta]]'', from Germanic ''*skurtijon''.  Compare ''[[shirt]
 * Japanese: [[スカート]] ([[すかーと]]) (sukāto)
 {{trans-mid}}
 * Korean: [[치마]] (chima)
-* Macedonian [[здолниште]] {{n}}, [[здолница]] {{f}}, [[сукња]] {{f}} (''colloq.'')
+* [[Macedonian]]: [[здолниште]] {{n}}, [[здолница]] {{f}}, [[сукња]] {{f}} (''colloq.'')
 * Maltese: [[dublett]] {{m}}
 * Old English: [[scyrte]] {{f}}
 * Persian: {{fa-Arab|[[دامن دوخت]]}}
