--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -13,16 +13,16 @@ Old English ''[[pleġa]]'', ''plæġa''
 ====Noun====
 {{en-noun|plays|-}}
 
-# Activity for amusement only, especially among the young.
-# A [[literary]] composition, intended to be represented by actors impersonating the characters and speaking the dialogue.
-# A theatrical performance featuring [[actor]]s.
-# An individual's performance in a sport.
-# A major move by a business.
-# A geological formation that contains an accumulation or prospect of hydrocarbons or other resources.
-# An area of free movement for a part of a mechanism. such as the amount of [[slackness]] in a drive chain.
+# {{uncountable}} Activity for amusement only, especially among the young.
+# {{countable}} A [[literary]] composition, intended to be represented by actors impersonating the characters and speaking the dialogue.
+# {{countable}} A theatrical performance featuring [[actor]]s.
+# {{countable}} An individual's performance in a sport.
+# {{countable}} A major move by a business.
+# {{countable}} A geological formation that contains an accumulation or prospect of hydrocarbons or other resources.
+# {{uncountable}} The extent to which a part of a mechanism can move freely. such as the amount of [[slackness]] in a drive chain.
 #: ''No wonder the fanbelt is slipping: there’s too much '''play''' in it.''
 #: ''Too much '''play''' in a steering wheel may be dangerous.''
-# (''turn-based games'') An action carried out when it is one's turn to play.
+# {{countable}} (''turn-based games'') An action carried out when it is one's turn to play.
 
 =====Synonyms=====
 * {{sense|literary composition}} [[drama]]
