--- a/en/傅/傅.11157.wikitext
+++ b/en/傅/傅.11157.wikitext
@@ -67,7 +67,7 @@ At Han dynasty, Fu is a great last name in history. Fu Kuan is the No. 9 general
 # {{defn|Japanese}}
 
 ====Readings====
-{{ja-readings|on=[[ふ]] (fu)|kun=[[もり]] (mori), [[つく]] (tsuku), [[かしずく]] (kashizuku)}}
+* {{ja-readings|on=[[ふ]] (fu)|kun=[[もり]] (mori), [[つく]] (tsuku), [[かしずく]] (kashizuku)}}
 
 ----
 
@@ -96,8 +96,8 @@ At Han dynasty, Fu is a great last name in history. Fu Kuan is the No. 9 general
 
 # {{defn|Min Nan}}
 
-===Descendants===
-*{{context|Hokkien dialect}} Filipino: {{l|fil|Po}}
+====Descendants====
+* {{context|Hokkien dialect}} Filipino: {{l|fil|Po}}
 
 ----
 
