--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -54,7 +54,7 @@ From Old Norse ''[[skyrta]]'', from Germanic ''*skurtijon''.  Compare ''[[shirt]
 * Persian: {{fa-Arab|[[دامن دوخت]]}}
 * Polish: {{t+|pl|spódnica|f}}
 * Portuguese: {{t+|pt|saia|f}}
-* [[Romani]]: [[rotya]]
+* [[Romani]]: {{tø|rom|rotya|f}}
 * Russian: {{t+|ru|юбка|f|tr=júbka|sc=Cyrl}}
 * Serbian:
 *: Cyrillic: [[сукња#Serbian|сукња]] {{f}}
