t+ar:[[تقاتل]] t-balance ([[User_talk:Conrad.Irwin/editor.js|Assisted]]) <fight#6534876>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -40,7 +40,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 =====Translations=====
 {{trans-top|to contend in physical conflict}}
 * {{trreq|Albanian}}
-* Arabic: {{Arab|[[قاتل]]}} {{IPAchar|(qātala)}}
+* Arabic: {{Arab|[[قاتل]]}} {{IPAchar|(qātala)}},  {{t|ar|تقاتل|tr=taqātala|sc=Arab}}
 * Armenian: [[կռվել]] (kṙvel)
 * {{trreq|Basque}}
 * Bulgarian: [[боря се]]
@@ -65,9 +65,9 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 * Japanese: [[喧嘩する]] ([[けんかする]], kenka-suru), [[対決]] ([[たいけつする]], taiketsu-suru), [[戦う]] / [[闘う]] ([[たたかう]], tatakau)
 * [[Khmer]]: {{Khmr|[[វាយតប់]]}} (wīē-dtop)
 * Korean: [[다투다]] (datuda), [[싸우다]] (ssauda)
+{{trans-mid}}
 * Kurdish:
 *: Sorani: {{t|ku|شه‌ڕ کردن|tr=shaR kirdin|sc=ku-Arab}}
-{{trans-mid}}
 * Lao: {{t-|lo|ຕໍ່ສູ້|tr=töö-suu|sc=Laoo|xs=Lao}}, {{t-|lo|ຮົບ|tr=hop|sc=Laoo|xs=Lao}}
 * Latin: {{t-|la|pugnare}}
 * {{trreq|Latvian}}
