--- a/en/惣/惣.15608.wikitext
+++ b/en/惣/惣.15608.wikitext
@@ -18,7 +18,7 @@
 # {{defn|Japanese}}
 
 ====Readings====
-* {{ja-readings|on=[[そう]] (sō)|kun=[[いそがしい]] (isogashii), [[そうじて]] (soujite)}}
+* {{ja-readings|on=[[そう]] (sō)|kun=[[いそがしい]] (isogashii), [[そうじて]] (sōjite)}}
 
 ----
 
