removed noun's Related Terms section containing no etymologically related terms; changed verb's See Also section to Related Terms <stomach#6549404>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -25,9 +25,6 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 {{rel-mid3}}
 {{rel-bottom}}
 
-====Related terms====
-* [[alvinolagnia]]
-
 ====Translations====
 {{trans-top|organ that stores food}}
 * Arabic: {{Arab|[[معدة]]}} {{unicode|(máʕida)}} {{f}}
@@ -112,7 +109,7 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 #: ''I really can’t '''stomach''' jobs involving that much paperwork, but some people seem to tolerate them.''
 #: ''I can't '''stomach''' her cooking.''
 
-===See also===
+====Derived terms====
 * [[stomachable]]
 * [[unstomachable]]
 
