iwiki +[[:ko:coat]] <coat#6552844>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -108,6 +108,7 @@
 [[ar:coat]]
 [[de:coat]]
 [[fr:coat]]
+[[ko:coat]]
 [[hy:coat]]
 [[io:coat]]
 [[id:coat]]
@@ -125,6 +126,6 @@
 [[tt:coat]]
 [[te:coat]]
 [[th:coat]]
-[[vi:coat]]
 [[tr:coat]]
+[[vi:coat]]
 [[zh:coat]]
