t+ceb:[[Pransiya]] ([[User_talk:Conrad.Irwin/editor.js|Assisted]]) <France#6560858>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -40,6 +40,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}.
 * [[Breton]]: [[Frañs]] ''(state)'', [[Bro-C'hall]] ''(country)''
 * Bulgarian: [[Франция]] (Frántsija) {{f}}
 * [[Catalan]]: [[França]] {{f}}
+* [[Cebuano]]: {{tø|ceb|Pransiya}}
 * Chinese: [[法兰西]] (Fǎlánxī), [[法国]] (Fǎguó)
 *: Teochew: Huag8gog4
 * Chinese [[Min Nan]]: [[Hoat-kok]]
