--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -26,69 +26,69 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 ====Translations====
 {{trans-top|image}}
 * Bosnian: {{t-|bs|ikona|f}}
-* Dutch: [[icoon]] {{f|m}}
+* Dutch: {{t|nl|icoon|f|m}}
 * Finnish: {{t-|fi|ikoni}}, {{t+|fi|symboli}}
 * French: {{t+|fr|icône|f}}
 * German: {{t+|de|Bild|n}}
-* Greek: [[εικόνα]] [iˈko̞na] {{f}}, [[απεικόνιση]] [apiˈko̞niˌsi] {{f}}, [[παράσταση]] [paˈrastaˌsi] {{f}}, [[αναπαράσταση]] [anapaˈrastaˌsi] {{f}}, [[ομοίωμα]] [o̞ˈmio̞ˌma] {{n}}, [[είδωλο]] [ˈiðo̞ˌlo̞] {{n}}, [[απείκασμα]] [aˈpikaˌzma] {{n}}, [[απεικόνισμα]] [apiˈko̞niˌzma] {{n}}
+* Greek: [[εικόνα]] (ikóna) {{f}}, [[απεικόνιση]] (apikónisi) {{f}}, [[παράσταση]] (parástasi) {{f}}, [[αναπαράσταση]] (anaparástasi) {{f}}, [[ομοίωμα]] (omíoma) {{n}}, [[είδωλο]] (íðolo) {{n}}, [[απείκασμα]] (apíkazma) {{n}}, [[απεικόνισμα]] (apikónizma) {{n}}
 {{trans-mid}}
 * Italian: {{t+|it|icona|f}}
 * Polish: {{t+|pl|ikona|f}}
 * Russian: {{t|ru|икона|f|tr=ikóna|sc=Cyrl}}
 * Serbian:
-*: Cyrillic: [[икона#Serbian|икона]] {{f}}
-*: Latin: [[ikona#Serbian|ikona]] {{f}}
+*: Cyrillic: {{t|sr|икона|f}}
+*: Roman: [[ikona#Serbian|ikona]] {{f}}
 * Spanish: [[icono]] {{m}}, [[ícono]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|religious painting}}
 * Bosnian: {{t-|bs|ikona|f}}
 * Czech: {{t-|cs|ikona|f}}
-* Dutch: [[icoon]] {{f|m}}
+* Dutch: {{t|nl|icoon|f|m}}
 * Finnish: {{t-|fi|ikoni}}
 * German: {{t+|de|Ikone|f}}
-* Greek: [[εικόνα]] [iˈko̞na] {{f}}, [[εικόνισμα]] [iˈko̞niˌzma] {{n}}
+* Greek: [[εικόνα]] (ikóna) {{f}}, [[εικόνισμα]] (ikónizma) {{n}}
 * Italian: {{t+|it|icona|f}}
 {{trans-mid}}
 * Latin: {{t+|la|icon|f}}
 * Polish: {{t+|pl|ikona|f}}
 * Russian: {{t+|ru|икона|f|tr=ikóna|sc=Cyrl}}
 * Serbian:
-*: Cyrillic: [[икона#Serbian|икона]] {{f}}
-*: Latin: [[ikona#Serbian|ikona]] {{f}}
-* Spanish: [[icono]] {{m}}, [[ícono]] {{m}}
+*: Cyrillic: {{t|sr|икона|f}}
+*: Roman: [[ikona#Serbian|ikona]] {{f}}
+* Spanish: {{t|es|icono|m}}, {{t|es|ícono|m}}
 {{trans-bottom}}
 
 {{trans-top|best example of something}}
 * Bosnian: {{t-|bs|ikona|f}}
-* Dutch: [[icoon]] {{f|m}}, [[idool]] {{n}}
+* Dutch: {{t|nl|icoon|f|m}}, {{t|nl|idool|n}}
 * Finnish: {{t+|fi|symboli}}, {{t-|fi|ikoni}}
 * German: {{t+|de|Symbol|n}}
-* Greek: [[είδωλο]] [ˈiðo̞ˌlo̞] {{n}}, [[ίνδαλμα]] [ˈinðalˌma] {{n}}, [[εικόνα]] [iˈko̞na] {{f}}
+* Greek: [[είδωλο]] (íðolo) {{n}}, [[ίνδαλμα]] (ínðalma) {{n}}, [[εικόνα]] (ikóna) {{f}}
 * Italian: {{t+|it|icona|f}}
 {{trans-mid}}
 * Polish: {{t+|pl|ikona|f}}, {{t+|pl|symbol|m}}
 * Serbian:
-*: Cyrillic: [[икона#Serbian|икона]] {{f}}
-*: Latin: [[ikona#Serbian|ikona]] {{f}}
-* Spanish: [[icono]] {{m}}, [[ícono]] {{m}}
+*: Cyrillic: {{t|sr|икона|f}}
+*: Roman: [[ikona#Serbian|ikona]] {{f}}
+* Spanish: {{t|es|icono|m}}, {{t|es|ícono|m}}
 {{trans-bottom}}
 
 {{trans-top|small picture, computer icon}}
 * Bosnian: {{t-|bs|ikona|f}}
 * Czech: {{t-|cs|ikona|f}}
-* Dutch: [[icoon]] {{f|m}}, [[pictogram]] {{n}}
+* Dutch: {{t|nl|icoon|f|m}}, {{t|nl|pictogram|n}}
 * Finnish: {{t+|fi|kuvake}}
 * German: {{t-|de|Icon|n}}
-* Greek: [[εικονίδιο]] [iko̞ˈniðiˌo̞] {{n}}
+* Greek: [[εικονίδιο]] (ikoníðio) {{n}}
 * Italian: {{t+|it|icona|f}}
 {{trans-mid}}
 * Polish: {{t+|pl|ikona|f}}, [[ikonka]] {{f}}
 * Russian: {{t|ru|иконка|f|tr=ikónka|sc=Cyrl}}
 * Serbian:
-*: Cyrillic: [[икона#Serbian|икона]] {{f}}
-*: Latin: [[ikona#Serbian|ikona]] {{f}}
-* Spanish: [[icono]] {{m}}, [[ícono]] {{m}}
+*: Cyrillic: {{t|sr|икона|f}}
+*: Roman: [[ikona#Serbian|ikona]] {{f}}
+* Spanish: {{t|es|icono|m}}, {{t|es|ícono|m}}
 {{trans-bottom}}
 
 {{checktrans-top}}
