t+mk:[[Нов Зеланд]] ([[WT:EDIT|Assisted]]) <New Zealand#6582096>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -43,6 +43,7 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 * Japanese: {{t-|ja|ニュージーランド|tr=Nyū Jīrando|sc=Jpan}}
 * Korean: [[뉴질랜드]] (nyujillaendeu)
 * Latin: [[Nova Zelandia]] {{f}}
+* [[Macedonian]]: {{t|mk|Нов Зеланд|m|tr=Nov Zéland|sc=Cyrl}}
 * Maltese: New Zealand
 * Maori: [[Aotearoa]], [[Niu Tireni]]
 * Norwegian: {{t-|no|New Zealand}}, {{t-|no|Ny-Zealand}}
